--- a/src/locales/es/brand.json
+++ b/src/locales/es/brand.json
@@ -14,7 +14,7 @@
       "displayTitle": {
         "logoPack": "Logo Pack"
       },
-      "files": "files"
+      "files": "Archivos"
     },
     "guides": {
       "general": {
