--- a/src/locales/es/founding-members.json
+++ b/src/locales/es/founding-members.json
@@ -7,7 +7,7 @@
       "referralScore": "Referral Score",
       "totalScore": "Total Score",
       "inducted": "Inducted",
-      "member": "Member",
+      "member": "Miembro",
       "backButton": "Back to Program page",
       "before": "Before",
       "account": "Account",
