--- a/src/locales/es/general.json
+++ b/src/locales/es/general.json
@@ -5,7 +5,7 @@
       "text": "Start earning",
       "altText": "Join & start earning"
     },
-    "download": "Download",
+    "download": "Descargar",
     "close": "Close",
     "accept": "Accept",
     "openDiscord": "Open Discord",
