--- a/src/locales/es/get-started.json
+++ b/src/locales/es/get-started.json
@@ -18,7 +18,7 @@
       "opportunities": "Pick one of the opportunities below"
     },
     "opportunities": {
-      "title": "Opportunities",
+      "title": "Oportunidades",
       "bounties": {
         "title": "Bounties",
         "text": "Bounties are long running tasks which anyone can attempt to tackle in a exchange for some reward. They are created either by Jsgenesis, or by the Council.",
