--- a/src/locales/es/manifesto.json
+++ b/src/locales/es/manifesto.json
@@ -4,7 +4,7 @@
       "description": "Read the Joystream Manifesto"
     },
     "hero": {
-      "title": "The Joystream Manifesto",
+      "title": "El manifiesto de Joystream",
       "text": "Our Manifesto sets out both the problems we believe are associated with digital media platforms in their current form as well as our proposed solution to these concerns."
     },
     "problem": {
