--- a/src/locales/es/token.json
+++ b/src/locales/es/token.json
@@ -17,7 +17,7 @@
     "faq": {
       "title": "Testnet Token Information",
       "whatIsTJoy": {
-        "title": "What is tJOY?",
+        "title": "¿Qué es tJOY?",
         "text": "tJOY (testJOY) is the currency used on Joystream incentivized testnets."
       },
       "tJoyValueOrigin": {
