--- a/src/locales/es/acropolis.json
+++ b/src/locales/es/acropolis.json
@@ -1,59 +1,59 @@
 {
   "acropolis": {
     "siteMetadata": {
-      "description": "Explore the Acropolis testnet"
+      "description": "Explora la testnet de Acrópolis"
     },
     "hero": {
-      "title": "Acropolis Network",
-      "text": "Explore available roles and pick the one that suits you best. Influence the platform's development and earn real money in the process.",
-      "chipText": "What is this?"
+      "title": "Red de Acrópolis",
+      "text": "Explora los roles disponibles y escoge el que mejor se adapte a ti. Influye en el desarrollo de la plataforma y gana dinero real en el proceso.",
+      "chipText": "¿Qué es esto?"
     },
     "heroCard": {
-      "title": "REPLACED BY ROME ON"
+      "title": "REEMPLAZADO POR ROMA EN"
     },
     "modal": {
-      "title": "The Acropolis of Athens",
-      "text": "<0>Known for its great architecture, Acropolis'</0> perhaps most famous building is the Parthenon. It was built to celebrate their victory over Persian invaders, and is today seen as a symbol for democracy and western civilization."
+      "title": "La Acrópolis de Atenas",
+      "text": "<0>Conocida por su gran arquitectura, Acrópolis'</0> quizás su edificio más famoso es el Partenón. Fue construida para celebrar la victoria contra los invasores Persas, hoy en día es visto como un símbolo de la democracia y la civilización occidental."
     },
     "criticalDocuments": {
-      "title": "Critical Documents",
+      "title": "Documentos Críticos",
       "fullSpecifications": {
-        "title": "Full Specifications",
-        "text": "Read the specs of the newly implemented features of Acropolis."
+        "title": "Especificaciones Completas",
+        "text": "Lea las especificaciones de las nuevas características implementadas de Acropolis."
       },
       "releasePlan": {
-        "title": "Release Plan",
-        "text": "Read the release plan as it was made during the planning stage, and learn more about how the development evolved."
+        "title": "Plan de lanzamiento",
+        "text": "Lea el plan de lanzamiento tal como se hizo durante la etapa de planificación y obtenga más información sobre cómo evolucionó el desarrollo."
       }
     },
     "testnetGoals": {
-      "title": "Testnet Goals",
-      "subtitle": "The goals below are a simplified representation of the Key Results listed in our Release <0>OKR</0>",
+      "title": "Objetivos de la testnet",
+      "subtitle": "Los objetivos a continuación son una representación simple de los resultados claves listados en nuestro lanzamiento <0>OKR</0>",
       "goals": {
         "forum": {
-          "title": "Build and release an on-chain forum",
-          "text": "The final platform will have built in multiple ways of facilitating easy and secure public, and private, communication and information sharing among members. The forum is the first step allowing the platform members to communicate, share ideas and discuss."
+          "title": "Cree y publique un foro en cadena",
+          "text": "La plataforma final será creada con múltiples formas para facilitar el intercambio de información y una comunicación tanto pública como privada fácil y segura entre los miembros. El foro es el primer paso que permite a los miembros de la plataforma comunicarse, compartir ideas y debatir."
         },
         "storageNode": {
-          "title": "Rebuild and release the storage node",
-          "text": "Where the old storage node had some bugs making it unable to sync between clients and required a hardcoded liaison, the new storage node is working as intended with no hierarchy or privileges."
+          "title": "Reconstruir y lanzar el nodo de almacenamiento",
+          "text": "Mientras que el antiguo nodo de almacenamiento tenía algunos errores que lo impedían sincronizarse entre los clientes y requería un enlace codificado, el nuevo nodo de almacenamiento funciona como se esperaba sin jerarquías ni privilegios."
         },
         "storageProviders": {
-          "title": "Ensure high uptime of storage providers",
-          "text": "Both content creators and consumers user experience depends on various metrics, but perhaps the most important is that the storage node they connect to responds to their request. Whether or not this goal is achieved depends on both the reliability of the software, a good reporting system and corrective actions from multiple parties."
+          "title": "Garantiza un alto tiempo de actividad de los proveedores de almacenamiento",
+          "text": "La experiencia de usuario tanto de los creadores de contenido como de los consumidores depende de varias métricas, pero quizás la más importante es que el nodo de almacenamiento al que se conectan responde a su solicitud. Que este objetivo se logre o no depende tanto de la confiabilidad del software, como de un buen sistema de informes y de las acciones correctivas de múltiples partes."
         },
         "tranches": {
-          "title": "Build the storage node with \"tranches\"",
-          "text": "Although the content directory is currently small, at some point it's not feasible to expect all storage providers to have full replication of all the content. Tranches would allow storage providers to select a subset of the content directory, suitable to their capabilities."
+          "title": "Construya el nodo de almacenamiento con \"tramos\"",
+          "text": "Aunque el directorio de contenido es actualmente pequeño, en algún momento no es factible esperar que todos los proveedores de almacenamiento tengan una replicación completa de todo el contenido. Los tramos permitirían a los proveedores de almacenamiento seleccionar un subconjunto del directorio de contenido, adecuado a sus capacidades."
         }
       }
     },
     "roles": {
-      "title": "Roles available on the Acropolis testnet"
+      "title": "Funciones disponibles en la testnet de Acrópolis"
     },
     "map": {
-      "title": "Acropolis of Athens",
-      "text": "<0>The Acropolis is a citadel on a hill in the heart of Athens.</0> It was also at the heart of Ancient Greece, a powerful civilization and empire. Acropolis is famous for its ancient buildings, architecture, historical significance and is one of the main tourist attractions of Athens. It is on UNESCOs list \"World Heritage Sites\".<1/><1/> We chose the name as we had to scale back our ambitions for the next testnet after some issues with the release of Athens. Thus, Acropolis can be considered a sub-release, despite including some new features not intended for Athens. <1/><1/> <2><0/> Explore previous testnet</2>"
+      "title": "Acrópolis de Atenas",
+      "text": "<0>La Acrópolis es una ciudadela en una colina en el corazón de Atenas.</0> También estaba en el corazón de la Antigua Grecia, una poderosa civilización e imperio. La Acrópolis es famosa por sus edificios antiguos, arquitectura, importancia histórica y es una de las principales atracciones turísticas de Atenas. Está en la lista de la UNESCO \"Sitios del Patrimonio Mundial\".<1/><1/> Elegimos el nombre porque tuvimos que reducir nuestras ambiciones para la siguiente red de pruebas, después de algunos problemas con el lanzamiento de Atenas. Por lo tanto, Acropolis puede considerarse un sub-lanzamiento, a pesar de incluir algunas características nuevas que no están pensadas para Atenas. <1/><1/> <2><0/> Explora la red de Pruebas anterior</2>"
     }
   }
 }
