--- a/src/locales/es/antioch.json
+++ b/src/locales/es/antioch.json
@@ -1,29 +1,29 @@
 {
   "antioch": {
     "siteMetadata": {
-      "description": "Explore the Antioch testnet"
+      "description": "Explora la testnet de Antioch"
     },
     "hero": {
-      "title": "Antioch Network",
+      "title": "Red de Antioch",
       "text": "The Antioch release seeks to patch a chain split bug which unfortunately sabotaged the previous testnet."
     },
     "heroCard": {
-      "title": "REPLACED BY SUMER ON"
+      "title": "REEMPLAZADO POR SUMER EN"
     },
     "criticalDocuments": {
       "title": "Critical Documents",
       "releasePlan": {
-        "title": "Release Plan",
-        "text": "Read the release plan as it was made during the planning stage, and learn more about how the development evolved."
+        "title": "Plan de lanzamiento",
+        "text": "Lea el plan de lanzamiento tal como se hizo durante la etapa de planificación y aprenda más sobre cómo evolucionó el desarrollo."
       },
       "blogPost": {
-        "title": "Announcement Blog Post",
-        "text": "Read a brief primer on the Antioch testnet and its objectives."
+        "title": "Blog de Anuncio",
+        "text": "Lea una breve introducción a la testnet de Antioch y sus objetivos."
       }
     },
     "testnetGoals": {
-      "title": "Testnet Goals",
-      "subtitle": "The goals listed below are a simplified representation of our main objectives for the Antioch testnet.",
+      "title": "Objetivos de la testnet",
+      "subtitle": "Las metas que se enumeran a continuación son una representación simplificada de nuestros principales objetivos para la testnet de Antioch.",
       "goals": {
         "substrateVersion": {
           "title": "Upgrade Substrate Version",
@@ -32,7 +32,7 @@
       }
     },
     "roles": {
-      "title": "Incentivized Roles for the Antioch Network"
+      "title": "Funciones incentivadas para la red de Antioch"
     },
     "map": {
       "title": "Antioch",
