--- a/src/locales/ru/athens.json
+++ b/src/locales/ru/athens.json
@@ -1,59 +1,59 @@
 {
   "athens": {
     "siteMetadata": {
-      "description": "Explore the Athens testnet"
+      "description": "Изучаем тестнет Athens"
     },
     "hero": {
-      "title": "Athens Network",
-      "text": "Explore available roles and pick the one that suits you best. Influence the platform's development and earn real money in the process.",
-      "chipText": "What is this?"
+      "title": "Сеть Athens",
+      "text": "Изучите доступные варианты участия и выбирайте те, которые вам больше всего подходят. Влияйте на развитие платформы и зарабатывайте при этом реальные деньги.",
+      "chipText": "Что это?"
     },
     "heroCard": {
-      "text": "AFTER LAUNCHING 17 / 04 / 19 <0/> THE NETWORK WAS UPGRADED TO <1>ACROPOLIS</1> ON"
+      "text": "ПОСЛЕ ЗАПУСКА 17 / 04 / 19 <0/> СЕТЬ БЫЛА ОБНОВЛЕНА ДО <1>ACROPOLIS</1>"
     },
     "modal": {
-      "title": "Owl of Athena",
-      "text": "<0>In Greek mythology, a little owl (Athene noctua)</0> traditionally represents or accompanies Athena, the virgin goddess of wisdom. Because of such association, the bird — often referred to as the \"owl of Athena\" — has been used as a symbol of knowledge, wisdom, perspicacity and erudition throughout the Western world."
+      "title": "Сова Афины",
+      "text": "<0>В греческой мифологии маленькая сова (Athene noctua) </0> традиционно представляет или сопровождает Афину, девственную богиню мудрости. Из-за этой ассоциации птица, которую часто называют \"совой Афины\", использовалась как символ знания, мудрости, проницательности и эрудиции во всем западном мире."
     },
     "criticalDocuments": {
-      "title": "Critical Documents",
+      "title": "Важная документация",
       "fullSpecifications": {
-        "title": "Full Specifications",
-        "text": "No specifications was published for Athens."
+        "title": "Полные спецификации",
+        "text": "Спецификации для Athens не были опубликованы."
       },
       "releasePlan": {
-        "title": "Release Plan",
-        "text": "Read the release plan as it was made during the planning stage, and learn more about how the development evolved."
+        "title": "План релиза",
+        "text": "Прочтите план релиза в том виде, в котором он был составлен на этапе планирования, и сравните с тем, как прошла разработка."
       }
     },
     "testnetGoals": {
-      "title": "Testnet Goals",
-      "subtitle": "The goals below are a simplified representation of the Key Results listed in our Release <0>OKR</0>",
+      "title": "Цели тестнета",
+      "subtitle": "Указанные ниже цели дают общее представление о ключевых результатах, перечисленных в релизе <0>OKR</0>",
       "goals": {
         "media": {
-          "title": "Enable media on the platform",
-          "text": "As a \"user governed media platform\", allowing users to upload and consume and content was a major goal for us."
+          "title": "Поддержка медиа-платформы",
+          "text": "Возможность загружать и получать контент является главной целью для нас, как для медиа-платформы, управляемой пользователями."
         },
         "memberships": {
-          "title": "Introduce platform memberships",
-          "text": "Although we are building an open blockchain in the sense that users are free to send tokens as they like, the Joystream experience is about having the platform users own, operate and govern the platform. We are agnostic on exactly what parts of the platform will be reserved for members, some actions will require and extra level of screening and accountability."
+          "title": "Введение учетных записей платформы",
+          "text": "Несмотря на то, что мы строим открытый блокчейн в том смысле, что пользователи могут свободно отправлять токены по своему усмотрению, идея Joystream заключается в том, чтобы пользователи платформы владели и управляли ей. Мы еще не знаем, какие именно части платформы будут доступны участникам. Также некоторые действия могут потребовать дополнительных проверок и внесения в журнал работы."
         },
         "storageNode": {
-          "title": "Build and release the storage node",
-          "text": "Although a storage node was built and used to host and distribute the platform content, it had some bugs making it unable to sync between clients and required a hardcoded liaison."
+          "title": "Релиз обновленного узла хранения",
+          "text": "Несмотря на то, что узел хранения уже ранее работал, размещал и распространял контент платформы, он содержал жестко прописанные зависимости и баги, которые препятствовали синхронизации между клиентами."
         },
         "runtimeUpgrade": {
-          "title": "Upgrade the runtime through a Council vote",
-          "text": "The intention was for Jsgenesis to create a proposal for a <0>runtime upgrade</0> and have the Council vote on it. If the Council reached quorum, the consensus rules of the system would automatically get upgraded in flight. Unfortunately, the <1>Sparta network crashed</1> before we reached this stage, and had to start Athens as a new chain with a new genesis block."
+          "title": "Одобрение обновлений платформы голосованиями Совета",
+          "text": "Целью Jsgenesis было создание предложения по <0>обновлению среды выполнения</0> и голосование за него в Совете. Если бы Совет достиг кворума, настройки консенсуса системы были бы обновлены автоматически без приостановки работы сети. К сожалению, <1>сеть Sparta потерпела крах</1> до того, как мы достигли этой стадии, и мы вынуждены были начать Athenes как новую сеть с новым генезисным блоком."
         }
       }
     },
     "roles": {
-      "title": "Roles available on the Athens testnet"
+      "title": "Поощряемые роли в сети Athens"
     },
     "map": {
-      "title": "The city of Athens",
-      "text": "<0>Athens is the capital of Greece.</0> It was also at the heart of Ancient Greece, a powerful civilisation and empire. The city is still dominated by 5th-century BC landmarks, including the Acropolis, a hilltop citadel topped with ancient buildings like the colonnaded Parthenon temple. <1/><1/> We chose the name Athens as, like our previous testnets, Mesopotamia and Sparta, the ancient Athens' historical significance in the development towards modern democracy and the rule of law. <1/><1/> <2> <0/> Explore previous testnet</2>"
+      "title": "Афины",
+      "text": "<0>Афины - столица Греции.</0> Они также были центром Древней Греции, могущественной цивилизации и империи. В городе по-прежнему преобладают достопримечательности V века до н.э, включая Акрополь, цитадель на вершине холма, увенчанного древними зданиями, такими как храм Парфенон с колоннами. <1/><1/> Мы выбрали названием теснета Athens (Афины), поскольку, как и в случае с нашими предыдущими тестнетами Mesopotamia и Sparta, историческое значение древних Афин заключается в развитии современной демократии и верховенства закона. <1/><1/> <2> <0/> Информация о предыдущем тестнете</2>"
     }
   }
 }
