Fixed Athens & Babylon translation

--- a/src/locales/ru/athens.json
+++ b/src/locales/ru/athens.json
@@ -31,20 +31,20 @@
       "subtitle": "Указанные ниже цели дают общее представление о ключевых результатах, перечисленных в релизе <0>OKR</0>",
       "goals": {
         "media": {
-          "title": "Поддержка медиа-платформы",
-          "text": "Возможность загружать и получать контент является главной целью для нас, как для медиа-платформы, управляемой пользователями."
+          "title": "Поддержка медиаплатформы",
+          "text": "Возможность загружать и получать контент является главной целью для нас как для медиаплатформы, управляемой пользователями."
         },
         "memberships": {
           "title": "Введение учетных записей платформы",
-          "text": "Несмотря на то, что мы строим открытый блокчейн в том смысле, что пользователи могут свободно отправлять токены по своему усмотрению, идея Joystream заключается в том, чтобы пользователи платформы владели и управляли ей. Мы еще не знаем, какие именно части платформы будут доступны участникам. Также некоторые действия могут потребовать дополнительных проверок и внесения в журнал работы."
+          "text": "Несмотря на то что мы строим открытый блокчейн в том смысле, что пользователи могут свободно отправлять токены по своему усмотрению, идея Joystream заключается в том, чтобы участники платформы владели, пользовались и управляли ей. Мы еще не знаем, какие именно части платформы будут доступны участникам, так как некоторые действия могут потребовать дополнительных проверок и отчетности."
         },
         "storageNode": {
           "title": "Релиз обновленного узла хранения",
-          "text": "Несмотря на то, что узел хранения уже ранее работал, размещал и распространял контент платформы, он содержал жестко прописанные зависимости и баги, которые препятствовали синхронизации между клиентами."
+          "text": "Несмотря на то что узел хранения использовался для размещения и распространения контента, он содержал жестко прописанные зависимости и баги, которые препятствовали синхронизации между клиентами."
         },
         "runtimeUpgrade": {
-          "title": "Одобрение обновлений платформы голосованиями Совета",
-          "text": "Целью Jsgenesis было создание предложения по <0>обновлению среды выполнения</0> и голосование за него в Совете. Если бы Совет достиг кворума, настройки консенсуса системы были бы обновлены автоматически без приостановки работы сети. К сожалению, <1>сеть Sparta потерпела крах</1> до того, как мы достигли этой стадии, и мы вынуждены были начать Athenes как новую сеть с новым генезисным блоком."
+          "title": "Голосование Совета за обновление среды выполнения",
+          "text": "Целью Jsgenesis было создание предложения по <0>обновлению среды выполнения</0> и голосование за него в Совете. Если бы Совет достиг кворума, настройки консенсуса системы были бы обновлены автоматически без приостановки работы сети. К сожалению, <1>сеть Sparta потерпела крах</1> до того, как мы достигли этой стадии, и мы были вынуждены запустить новую сеть Athens с новым генезисным блоком."
         }
       }
     },
@@ -53,7 +53,7 @@
     },
     "map": {
       "title": "Афины",
-      "text": "<0>Афины - столица Греции.</0> Они также были центром Древней Греции, могущественной цивилизации и империи. В городе по-прежнему преобладают достопримечательности V века до н.э, включая Акрополь, цитадель на вершине холма, увенчанного древними зданиями, такими как храм Парфенон с колоннами. <1/><1/> Мы выбрали названием теснета Athens (Афины), поскольку, как и в случае с нашими предыдущими тестнетами Mesopotamia и Sparta, историческое значение древних Афин заключается в развитии современной демократии и верховенства закона. <1/><1/> <2> <0/> Информация о предыдущем тестнете</2>"
+      "text": "<0>Афины - столица Греции.</0> Они также были центром Древней Греции, могущественной цивилизации и империи. В городе по-прежнему преобладают достопримечательности V века до н.э., включая Акрополь, цитадель на вершине холма, увенчанного древними зданиями, такими как храм Парфенон с колоннами. <1/><1/> Мы выбрали названием теснета Athens (Афины), поскольку, как и в случае с нашими предыдущими тестнетами Mesopotamia и Sparta, историческое значение древних Афин заключается в развитии современной демократии и верховенства закона. <1/><1/> <2> <0/> Информация о предыдущем тестнете</2>"
     }
   }
 }
