--- a/src/locales/ru/babylon.json
+++ b/src/locales/ru/babylon.json
@@ -32,7 +32,7 @@
       "goals": {
         "atlas": {
           "title": "Запуск Atlas 0.1",
-          "text": "Это станет первым выпуском нашего веб-приложения для потребителей контента, цель которого - быть значительно эффективнее и удобнее, чем текущая версия Pioneer."
+          "text": "Это станет первым релизом нашего веб-приложения для потребителей контента, цель которого - быть значительно эффективнее и удобнее, чем текущая версия Pioneer."
         },
         "contentDirectory": {
           "title": "Публикация нового каталога контента и запуск соответствующей рабочей группы",
