--- a/src/locales/es/sumer.json
+++ b/src/locales/es/sumer.json
@@ -1,47 +1,47 @@
 {
   "sumer": {
     "siteMetadata": {
-      "description": "Explore the Sumer testnet"
+      "description": "Explora la red de pruebas Sumer"
     },
     "hero": {
       "title": "Sumer Network",
-      "text": "Among other changes, the Sumer testnet release offers major improvements to content uploads through our playback app."
+      "text": "Entre otros cambios, el lanzamiento de la red de pruebas Sumer ofrece importantes mejoras en la carga de contenido a través de nuestra aplicación de reproducción."
     },
     "criticalDocuments": {
-      "title": "Critical Documents",
+      "title": "Documentos Críticos",
       "releasePlan": {
-        "title": "Release Plan",
-        "text": "Read the release plan as it was made during the planning stage, and learn more about how the development evolved."
-      },
+        "title": "Plan de lanzamiento",
+        "text": "Lea el plan de lanzamiento tal como se hizo durante la etapa de planificación y obtenga más información sobre cómo evolucionó el desarrollo.."
+      }, 
       "blogPost": {
-        "title": "Announcement Blog Post",
-        "text": "Read a brief primer on the Sumer testnet and its objectives."
+        "title": "Entrada del Blog de Anuncios",
+        "text": "Lea una breve introducción a la red de pruebas de Sumer y sus objetivos."
       }
     },
     "testnetGoals": {
-      "title": "Testnet Goals",
-      "subtitle": "The goals listed below are a simplified representation of our main objectives for the Sumer testnet.",
+      "title": "Objetivos de la red de pruebas",
+      "subtitle": "Los objetivos que se enumeran a continuación son una representación simplificada de nuestros principales objetivos para la red de pruebas Sumer.",
       "goals": {
         "contentPublishing": {
-          "title": "Enable content publishing from playback interface",
-          "text": "Sumer introduces the ability to create and manage channels and videos in the Joystream Player, replacing the cumbersome and technically challenging CLI-dependent process required on the Antioch testnet."
+          "title": "Habilitar la publicación de contenido desde la interfaz de reproducción",
+          "text": "Sumer introduce la capacidad de crear y administrar canales y videos en Joystream Player, reemplazando el engorroso y técnicamente desafiante proceso CLI-dependiente requerido en la red de pruebas Antioch."
         },
         "deployingNewContentDirectory": {
-          "title": "Deploying the new content directory",
-          "text": "As part of Sumer we will be introducing a simple native runtime module. This is because technical complexities and tradeoffs associated with the previous iterations of the content directory were not acceptable."
+          "title": "Implementar el nuevo directorio de contenido",
+          "text": "Como parte de Sumer, presentaremos un módulo de tiempo de ejecución nativo simple. Esto se debe a que las complejidades técnicas y las compensaciones asociadas con las iteraciones anteriores del directorio de contenido no eran aceptables.."
         },
         "enableBuilderRole": {
-          "title": "Enable builder/platform operations role",
-          "text": "We are introducing a new working group focused on platform operations. Originally, we had also planned to enable the new \"Gateway\" role, though this is no longer in the scope of the Sumer release."
+          "title": "Habilitar el rol de constructor/operaciones de plataforma",
+          "text": "Presentamos un nuevo grupo de trabajo centrado en las operaciones de la plataforma. Originalmente, también habíamos planeado habilitar el nuevo rol \"Gateway \", aunque esto ya no está en el punto de mira en el lanzamiento de Sumer."
         }
       }
     },
     "roles": {
-      "title": "Incentivized Roles for the Sumer Network"
+      "title": "Roles Incentivados para Sumer Network"
     },
     "map": {
       "title": "Sumer",
-      "text": "<0>Sumer is the earliest known civilization in the historical region of southern Mesopotamia</0>, emerging during the Chalcolithic and early Bronze Ages between the sixth and fifth millennium BC.<1/><1/>Living along the valleys of the Tigris and Euphrates, Sumerian farmers grew an abundance of grain and other crops, the surplus from which enabled them to form urban settlements. The region is thought to be where the earliest forms of writing emerged.<1/><1/><2><0/> Read the blog post</2>"
+      "text": "<0>Sumer es la civilización más antigua conocida en la región histórica del sur de Mesopotamia</0>, emergiendo durante el Calcolítico y la Edad del Bronce temprana entre el sexto y quinto milenio antes de Cristo.<1/><1/>Viviendo a lo largo de los valles del Tigris y el Éufrates, los agricultores sumerios cultivaban una gran cantidad de cereales y otros cultivos, cuyo excedente les permitió formar asentamientos urbanos. Se cree que en la región surgieron las primeras formas de escritura.<1/><1/><2><0/>Leer la entrada del blog</2>"
     }
   }
 }
